# sixtyfps-rust-template

./: Cargo.toml
src/: id_map_data.rs  main.rs
ui/: appwindow.60
