[package]
name = "rs60_async_calls"
version = "0.1.0"
authors = ["dmilyutin"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.1.5"
tokio = { version = "1.15.0", features = ["full"] }


[build-dependencies]
sixtyfps-build = "0.1.5"
